# PercutaneousApproachAnalysis

./: CMakeLists.txt  README.md
PercutaneousApproachAnalysis/: CMakeLists.txt  PercutaneousApproachAnalysis.py  VTKLineTrace.txt
PercutaneousApproachAnalysis/Resources/: PercutaneousApproachAnalysis.py
PercutaneousApproachAnalysis/old/: PercutaneousApproachAnalysis.py
